# candle-yolov8n

./: Cargo.toml  README.md
src/: main.rs  model.rs
